## automake.am
##
## docs/tables/Makefile.am for CallCommander
##
## by Fred Gleason <fredg@salemradiolabs.com>
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = shows.txt\
             version.txt\
             directory.txt\
             details_format.txt\
             actions_format.txt\
             users.txt\
             user_perms.txt\
             wireless_names.txt\
             city_names.txt\
             cid_filters.txt\
             cid_sources.txt\
             cid_maps.txt\
             show_slots.txt\
             connections.txt\
             virtual_systems.txt\
             winners.txt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
